--- a/development.ini
+++ b/development.ini
@@ -96,11 +96,11 @@ solr_url = http://solr:8080/solr
 #       Add ``datapusher`` to enable DataPusher
 #		Add ``resource_proxy`` to enable resorce proxying and get around the
 #		same origin policy
-ckan.plugins = datastore resource_proxy viewhelpers pages text_view recline_grid_view recline_graph_view resourcedata_theme pdf_view linechart barchart piechart basicgrid navigablemap choroplethmap apihelper issues officedocs_view contact hierarchy_display hierarchy_form
+ckan.plugins = datastore resource_proxy viewhelpers pages text_view recline_view recline_map_view recline_grid_view recline_graph_view webpage_view resourcedata_theme pdf_view navigablemap choroplethmap apihelper issues officedocs_view contact hierarchy_display hierarchy_form
 
 # Define which views should be created by default
 # (plugins must be loaded in ckan.plugins)
-ckan.views.default_views = image_view text_view recline_view
+ckan.views.default_views = image_view text_view recline_view pdf_view geojson_view
 
 
 ## Front-End Settings
