--- a/development.ini
+++ b/development.ini
@@ -56,7 +56,7 @@ ckan.datastore.default_fts_index_method = gist
 
 ## Site Settings
 
-ckan.site_url =
+ckan.site_url = http://resourcedata.datacats.io
 
 
 ## Authorization Settings
